--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.16.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "axios": "^0.16.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
+    "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5",
+    "react-scripts": "^1.0.7",
     "redux-logger": "^3.0.1"
   },
   "scripts": {
